# cpp-boilerplate-template-project

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
